# FutureKawa

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Jenkinsfile  README.md  commitlint.config.js  docker-compose.yml  package-lock.json  package.json  sonar-project.properties
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: README.md  cd-backend.yml  cd-country-api.yml  cd-frontend.yml  cd-iot-simulator.yml  ci-backend.yml  ci-country-api.yml  ci-frontend.yml  ci-iot-simulator.yml  ci-simulator.yml  ci.yml  release.yml
apps/: README.md
apps/country/: .env.example  README.md  docker-compose.yml
apps/country/api/: .dockerignore  .env  .env.dev  .gitignore  Dockerfile  README.md  composer.json  phpstan-baseline.neon  phpstan.dist.neon
apps/country/database/: README.md
apps/country/iot/: .gitignore  README.md  platformio.ini
apps/country/iot/simulator/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/country/iot/simulator/src/: config.py  generator.py  main.py  models.py  publisher.py  worker.py
apps/country/iot/simulator/tests/: test_config.py  test_generator.py  test_models.py  test_publisher.py  test_worker.py
apps/country/mosquitto/: mosquitto.conf
apps/hq/: .env.example  README.md  docker-compose.yml
apps/hq/backend/: .env.example  .gitattributes  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/hq/frontend/: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  Dockerfile  README.md  index.html  (+8 more)
docs/: CLAUDE.md  README.md
docs-site/: README.md  docusaurus.config.js  package-lock.json
docs/architecture/: adr-001-ci-github-actions-cd-jenkins.md  data-model.md  distributed-system.md  iot-design.md  overview.md
docs/ci-cd/: adr-001-ci-cd-hybrid.md  pipeline.md
docs/deployment/: running-the-stack.md
docs/phase2/: automation-schema.md  interview-questionnaire.md
docs/schemas/: README.md
docs/security/: auth.md
docs/tests/: manual-tests.md  strategy.md
infra/deploy/: README.md
infra/docker/: docker-compose.test.yml
infra/jenkins/: .env.example  Dockerfile  README.md  casc.yaml  docker-compose.yml  plugins.txt
(+253 files in other folders)
