[project]
name = "iot-simulator"
version = "0.1.0"
description = "FutureKawa IoT MQTT simulator worker"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt>=2.0",
    "pydantic-settings>=2.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
