[project]
name = "iot-simulator"
version = "0.1.0"
description = "FutureKawa IoT MQTT simulator worker"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt>=2.0",
    "pydantic-settings>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "vulture>=2.11",
    "pip-audit>=2.7",
    "poethepoet>=0.29",
]

[tool.uv]
package = false

# --- Quality tools -----------------------------------------------------------

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # pycodestyle, pyflakes, isort, pyupgrade, bugbear

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true        # paho-mqtt ships no type stubs
check_untyped_defs = true

# --- Tests & coverage --------------------------------------------------------

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py"]                # entry-point wiring, covered by e2e

[tool.coverage.report]
show_missing = true

# --- CI pipeline (run locally with `uv run poe ci`) --------------------------

[tool.poe.tasks]
lint = "ruff check src tests"
format-check = "ruff format --check src tests"
format = "ruff format src tests"
typecheck = "mypy src"
deadcode = "vulture src --min-confidence 80 --ignore-names cls"
audit = "pip-audit"
test = "pytest"

[tool.poe.tasks.quality]
sequence = ["lint", "format-check", "typecheck", "deadcode"]
default_item_type = "ref"

[tool.poe.tasks.security]
sequence = ["audit"]
default_item_type = "ref"

[tool.poe.tasks.ci]
sequence = ["quality", "security", "test"]
default_item_type = "ref"
